Example_labels/namespace_labels.yml
apiVersion: v1
kind: Namespace
metadata:
  name: kubilab-labels
  labels:
    environment: labels
