Example_labels/policy_labels_binding.yml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: policy-labels-binding
spec:
  policyName: policy-labels
  validationActions:
    - Deny
  paramRef:
    name: configmap-labels
    namespace: kubilab-labels
    parameterNotFoundAction: Deny
  matchResources:
    namespaceSelector:
      matchLabels:
        environment: labels
